k8s/production/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: chicmoz-prod
  annotations:
    cert-manager.io/cluster-issuer: "aztecscan-issuer-production"
spec:
  ingressClassName: nginx
  tls:
    - secretName: aztecscan-grafana-tls
      hosts:
        - dashboard.aztecscan.xyz
  rules:
    - host: dashboard.aztecscan.xyz
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
